--- a/employee/templates/employee.html
+++ b/employee/templates/employee.html
@@ -17,6 +17,7 @@
         <a href="{% url 'employee:attendance-view' %}" class="w-full aspect-1 bg-cyan-200 transition-all hover:bg-cyan-500 hover:scale-100 text-white rounded-md flex items-center justify-center scale-75">{% heroicon_outline 'clock' %}</a>
         <a href="{% url 'employee:leave-view' %}" class="w-full aspect-1 bg-cyan-200 transition-all hover:bg-cyan-500 hover:scale-100 text-white rounded-md flex items-center justify-center scale-75">{% heroicon_outline 'pencil-square' %}</a>
         <a href="{% url 'employee:course-view' %}" class="w-full aspect-1 bg-cyan-200 transition-all hover:bg-cyan-500 hover:scale-100 text-white rounded-md flex items-center justify-center scale-75">{% heroicon_outline 'document-duplicate' %}</a>
+        <a href="{% url 'employee:assessment-view' %}" class="w-full aspect-1 bg-cyan-200 transition-all hover:bg-cyan-500 hover:scale-100 text-white rounded-md flex items-center justify-center scale-75">{% heroicon_outline 'clipboard-document-list' %}</a>
 
         <a href="{% url 'employee:profile-view' %}" class="w-full aspect-1 bg-cyan-200 transition-all hover:bg-cyan-500 hover:scale-100 text-white rounded-md flex items-center justify-center scale-75 mt-auto">{% heroicon_outline 'user-circle' %}</a>
       </nav>
