--- a/employee/templates/employee/index.html
+++ b/employee/templates/employee/index.html
@@ -32,7 +32,7 @@
     </div>
     <div class="text-white basis-80 grow h-16 rounded-md from-cyan-400 to-cyan-800 bg-gradient-to-tr p-4 flex items-center justify-between">
       <span class="font-bold capitalize text-lg">performance</span>
-      <b>0</b>
+      <b>{{ performance }}%</b>
     </div>
   </section>
 
